--- a/angular-demo/src/app/test/test.component.html
+++ b/angular-demo/src/app/test/test.component.html
@@ -1,1 +1,5 @@
-<h2>Input Decorator {{value}}</h2>
+<h1>Input Decorator</h1>
+<h3>output :  {{value}} </h3>
+<hr>
+<h1>Output Decorator</h1>
+<button (click)="outputevent()">Output</button>
