--- a/angular-demo/src/app/app.component.html
+++ b/angular-demo/src/app/app.component.html
@@ -1,6 +1,6 @@
-<app-test [value]="data" (childevent)="message=$event"></app-test>
+<!-- <app-test [value]="data" (childevent)="message=$event"></app-test>
 <h2>{{message}}</h2>
 <hr>
-<!--<button (click)="viewchild()">VC Button</button> -->
-
+<button (click)="viewchild()">VC Button</button> 
+ -->
 <router-outlet></router-outlet>
